--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ cryptography==3.3.1
 defusedxml==0.7.0rc2
 Django==3.1.5
 django-cors-headers==3.7.0
+django-js-asset==1.2.2
+django-mptt==0.11.0
 django-templated-mail==1.1.1
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
